Bookstore Project - fixed miscellaneous alignments and added future planned fixes

--- a/BookStoreProject/BookStoreWebsite/WebContent/css/style.css
+++ b/BookStoreProject/BookStoreWebsite/WebContent/css/style.css
@@ -95,6 +95,8 @@ div.book {
 	display: inline-block;
 	margin: 20px;
 	text-align: center;
+	width: 255px;
+	vertical-align: top;
 }
 
 table.book {
